--- a/30178812/new website/templates/index.html
+++ b/30178812/new website/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css" type="text/css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles.css')}}" type="text/css">
     </head>
     <body class="container">
         <div class="title">Gym Class Booking System</div>
@@ -27,17 +27,22 @@
                 <td id="C9">I</td>
             </tr>
         </table>
+        <form method="POST">
         
         <br>
 
-        Name: <input type="text"><br>
-        Email: <input type="text"><br>
+        Select Class: <select name="classes"><option value="Yoga">Yoga</option><option value="Pilates">Pilates</option><option value="Spin Class">Spin Class</option></select><br>
+        Name: <input type="text" name="name"><br>
+        Email: <input type="text" name="email"><br>
 
         <br>
 
-        <form method="POST">
+        
             <input type="submit" value="Book Class">
+        </form><br>
+        <form action="/bookings">
+            <input type="submit" value="List of bookings">
         </form>
-        <script src="script.js"></script>
+        <script src="{{url_for('static', filename='script.js')}}"></script>
     </body>
 </html>
